--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             height: 240px;
             object-fit: cover;
             border-radius: 15px;
-            pointer-events: none; /* جلوگیری از کنترل ویدیو */
+            pointer-events: none;
         }
         .watch-video {
             margin-top: 20px;
@@ -52,7 +52,7 @@
 <body>
     <div class="overlay"></div>
     <video id="scaryVideo" disablePictureInPicture controlsList="nodownload nofullscreen noplaybackrate">
-        <source src="videos/scary.mp4" type="video/mp4">
+        <source src="https://drive.google.com/uc?export=download&id=1JbNr0JssIa2vH5zZ9d3G6CdPWrKTnxAI" type="video/mp4">
         Your browser does not support the video.
     </video>
     <p class="watch-video" onclick="playVideo()">Click here to watch the video</p>
@@ -64,13 +64,17 @@
 
             video.style.display = "block";
             video.play().catch(error => console.log("Error playing video:", error));
-            audio.play().catch(error => console.log("Error playing audio:", error));
+            
+            audio.play().catch(error => {
+                console.log("Error playing audio:", error);
+                setTimeout(() => audio.play(), 1000); // تلاش مجدد بعد از ۱ ثانیه
+            });
 
             document.querySelector(".watch-video").style.display = "none";
 
-            // وقتی ویدیو تمام شد، آن را از صفحه حذف کن
             video.onended = function() {
-                video.remove();
+                video.style.display = "none";
+                document.querySelector(".watch-video").style.display = "block";
             };
         }
     </script>
