--- a/index.html
+++ b/index.html
@@ -51,32 +51,5 @@
 </head>
 <body>
     <div class="overlay"></div>
-    <video id="scaryVideo" disablePictureInPicture controlsList="nodownload nofullscreen noplaybackrate">
-        <source src="https://raw.githubusercontent.com/deoler13/Deoler13b/c3d439e1d99ad098952eebb8ccb00c2050fb7200/scary.mp4" type="video/mp4">
-        Your browser does not support the video.
-    </video>
-    <p class="watch-video" onclick="playVideo()">Click here to watch the video</p>
-    
-    <script>
-        function playVideo() {
-            let video = document.getElementById("scaryVideo");
-            let audio = new Audio("scary-sound.mp3");
-
-            video.style.display = "block";
-            video.play().catch(error => console.log("Error playing video:", error));
-            
-            audio.play().catch(error => {
-                console.log("Error playing audio:", error);
-                setTimeout(() => audio.play(), 1000); // Retry after 1 second
-            });
-
-            document.querySelector(".watch-video").style.display = "none";
-
-            video.onended = function() {
-                video.style.display = "none";
-                document.querySelector(".watch-video").style.display = "block";
-            };
-        }
-    </script>
-</body>
-</html>
+    <video id="scaryVideo" muted playsinline disablePictureInPicture controlsList="nodownload nofullscreen noplaybackrate">
+        <so
